# python_playground

./: exercise2.py  loop.py  lsp.py  match.py  opening_file.py  ordering_system.py  pyproject.toml  setup.py
learn/: README.md  main.mojo  pyproject.toml  setup.py
learn/mojofied/: __init__.mojo  ds.mojo  init.mojo  lifetime.mojo  parametric.mojo
learn/src/: abc.py  abtract.py  comprehension_exercise.py  data_types.py  decorators.py  ds.py  exception.py  exercise1.py  ffi.py  file_opt.py  lsp.py  map_filter.py  opening_file.py  recursive.py  typecasting.py
learning/: abc.py  ctypes.py  decorators.py  ds.py  exercise1.py  ffi.py  file_opt.py  oop.py  opening_file.py  ordering_system.py  reverse.py
mariadb_sql/: pyproject.toml
mariadb_sql/src/: buffered_cursor.py  connection_pool.py  cursors.py  mysql_connector.py  stored_procedure.py
